--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
   "private": false,
   "name": "@rei-sogawa/path-builder",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "main": "index.js",
   "types": "index.d.ts",
+  "repository": "https://github.com/Rei-Sogawa/path-builder.git",
+  "license": "MIT",
   "scripts": {
     "build": "tsc"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "typescript": "^4.5.5"
+    "typescript": "^4.6.2"
   }
 }
